fix(header): collapse logo when search open on small screen

--- a/src/styles/custom-card-group.scss
+++ b/src/styles/custom-card-group.scss
@@ -1,6 +1,10 @@
 .custom-card-group {
   display: flex;
 
+  @media (max-width: 640px) {
+    display: block;
+  }
+
   &__third {
     flex: 0 0 calc(100% / 3);
   }
@@ -8,6 +12,10 @@
   &__half-height {
     display: flex;
     height: 50%;
+
+    @media (max-width: 640px) {
+      display: block;
+    }
   }
 
   &__flex-helper {
